@@ -1,5 +1,7 @@
 Changes for DateTime::Set
 
+- recurrence set intersection uses 'current'
+
 0.07     2003-05-23
 - some tweaking on intersection, union, and in the recurrence generator.
 - more tests
